--- a/backend/backend_project/frontend/static/CSS/forms-style.css
+++ b/backend/backend_project/frontend/static/CSS/forms-style.css
@@ -8,7 +8,8 @@
 
 body {
     /* background-color: var(--bg-color); */
-    background-image: url(./assets/background1.png);
+    background-image: url("../assets/background1.png");
+    /* background-image: url("{%static '../assets/background1.png'%}"); */
     text-align: center;
     font-family: Calibri;
     background-size: cover;
@@ -32,7 +33,6 @@ body::before {
 }
 .sign-up , .sign-in {
     color: var(--text-color);
-
     display: flex;
     align-items: center;
     justify-content: center;
