--- a/backend/backend_project/frontend/templates/frontend/pages/books.html
+++ b/backend/backend_project/frontend/templates/frontend/pages/books.html
@@ -34,6 +34,7 @@
                         <li><a href="{% url 'profile' %}"><i class="fas fa-user"></i> Profile</a></li>
                         <li><a href="{% url 'books' %}" class="active"><i class="fas fa-book"></i> Books</a></li>
                         <li><a href="{% url 'home' %}#features"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
+                        <li><a href="{% url 'borrowed' %}#features"><i class="fas fa-bookmark"></i> borrow list</a></li>
                         <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
                     </ul>
                 </nav>
