--- a/backend/backend_project/frontend/templates/frontend/pages/sign-in.html
+++ b/backend/backend_project/frontend/templates/frontend/pages/sign-in.html
@@ -40,20 +40,22 @@
                     <input id="remember" type="checkbox" name="remember">
                     <label for="remember" >Remember me</label>
                 </div>
+
+                {% comment %}  need to set the verified email to send the password {% endcomment %}
                 <a href="#" class="forgot-password">Forgot password?</a>
             </div>
 
             <button type="submit">Sign in</button>
-            <a class="cancel-button" href="./../../index.html">Cancel</a>
+            <a class="cancel-button" href="{% url 'home' %}">Cancel</a>
             <div class="sign-up">
                 <span>Don't have an account?</span>
-                <a href="./sign-up.html">Sign up</a>
+                <a href="{%url 'sign_up'%}">Sign up</a>
             </div>
         </form>
-        <img src="./../CSS/assets/man-reading-design.png" alt="man reading a book">
+        <img src="{%static 'assets/man-reading-design.png'%}" alt="man reading a book">
     </section>
-    <script src="./../Script/sign_in.js"></script>
-    <script src="./../Script/theme.js"></script>
+    <script src="{% static 'Script/sign_in.js' %}"></script>
+    <script src="{%static 'Script/theme.js'%}"></script>
 
 </body>
 </html>
