--- a/backend/backend_project/frontend/templates/frontend/pages/admin_dashboard.html
+++ b/backend/backend_project/frontend/templates/frontend/pages/admin_dashboard.html
@@ -52,7 +52,7 @@
         </ul>
     </div>
 
-    <button id="add-book"><i class="fa-solid fa-plus"></i></button>
+    <a id="add-book"><i class="fa-solid fa-plus"></i></a>
 
     <div class="overlayer hide">
         <div class="confirmation hide">
